fixed in Breadcrumbs.module: added flex-wrap: wrap to .list

--- a/src/components/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.module.scss
@@ -8,6 +8,7 @@
 
 .list {
   display: flex;
+  flex-wrap: wrap;
   gap: 6px;
   color:var(--color-gray-dark);
 }
